Incremental reasoner updates and ITs